see #11924 - Java 9 - fixes more deprecation warnings
git-svn-id: http://josm.openstreetmap.de/svn/trunk@10209 0c6e7542-c601-0410-84e7-c038aed88b3b